チャプター1終わり

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,6 +1,6 @@
 ---
 // src/components/header.astro
-import Container from "./container.astro"
+import Container from "./container.astro";
 ---
 
 <header>
