--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -1,7 +1,7 @@
 ---
-import '../styles/global.css'
-
-+ import Header from '../components/header.astro'
+import '../styles/global.css';
+import Header from '../components/header.astro';
+import Footer from "../components/footer.astro";
 ---
 
 <html lang="ja">
@@ -14,5 +14,6 @@ import '../styles/global.css'
 	<body>
         <Header />
         <slot />
+		<Footer />
 	</body>
 </html>
