--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,6 @@
-
 ---
-import '../styles/global.css'
-
-+ import Header from '../components/header.astro'
+import Default from "../layouts/default.astro";
+import Layout from "../layouts/default.astro";
 ---
 
 <html lang="ja">
@@ -13,8 +11,8 @@ import '../styles/global.css'
 		<title>Astro</title>
 	</head>
 	<body>
-        <Header />
-        <slot />
+		<Default>
+		<h1>Hello, World!</h1>
 	</body>
 </html>
-
+</Default>
