--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -9,9 +9,9 @@ import Container from "./container.astro";
       <span class="header__title">My Website</span>
       <nav>
         <ul>
-          <li><a href="/astro-hands-on/">Home</a></li>
-          <li><a href="/astro-hands-on/about">About</a></li>
-          <li><a href="/astro-hands-on/contact">Contact</a></li>
+          <li><a href="/js-workshopha/">Home</a></li>
+          <li><a href="/js-workshopha/about">About</a></li>
+          <li><a href="/js-workshopha/contact">Contact</a></li>
         </ul>
       </nav>
     </div>
