--- a/src/components/blogcard.astro
+++ b/src/components/blogcard.astro
@@ -16,7 +16,7 @@ const { entry, image } = Astro.props;
 ---
 
 <div class="blog-card">
-	<a href={`/astro-hands-on/blog/${entry.id}`} class="blog-card__link">
+	<a href={`/js-workshopha/blog/${entry.id}`} class="blog-card__link">
 		<div class="blog-card__image">
 			{image && (
 				<Image
